MDEV-18639 Assertion failure upon attempt to start with lower number of undo tablespaces

trx_rseg_t::is_persistent(): Correct a bogus debug assertion.